[DOCS] Render Readme